# Agentic_Infrastructure_Challenge

./: .gitignore  Constitution.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: main.yml
research/: architecture_strategy.md  tooling_strategy.md
skills/: README.md
skills/Skill_Publish_and_Engage_V1/: Contract.json  README.md
skills/Skill_Trend_Scan_V1/: Contract.json  README.md
skills/Skill_Write_Post_V1/: Contract.json  README.md
skills/Skill_generate_Media_V1/: Contract.json  README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
